[package]
name = "crabble"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["ast"]

[dependencies]
ast = {path="ast"}
bevy_reflect = "0.11"
chumsky = { version = "1.0.0-alpha.6", features = ["label"] }
cranelift = "0.100"
cranelift-jit = "0.100"
cranelift-module = "0.100"
cranelift-native = "0.100"
indexmap = "2"
rustc-hash = "1.1"
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.50"
